overlays/staging/shared/databases.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: staging
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
          # --------------------------------------------
      # --- DEFINICJA DYSKU DLA KONTENERA ---
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
      # --------------------------------------
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: staging
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
